--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="generator.js" defer></script>
 </head>
 <body>
-    <div id="body"></div>
-    
+    <div id="body">
+        <h1>FTGEkonomi TE4</h1>
+    </div>
 </body>
 </html>
